--- a/public/css/track_orders.css
+++ b/public/css/track_orders.css
@@ -49,7 +49,7 @@ h1 {
 
 /* Order Card */
 .order-card {
-    background: #ffffff;
+    background: #fff9834f;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #e0e0e0;
@@ -113,8 +113,8 @@ h1 {
 .view-all {
     display: inline-block;
     padding: 10px 22px;
-    background: #007bff;
-    color: white;
+    background: #ffffff;
+    color: rgb(51, 51, 51);
     text-decoration: none;
     border-radius: 8px;
     font-size: 0.95em;
@@ -123,7 +123,7 @@ h1 {
 }
 
 .view-all:hover {
-    background: #0056b3;
+    background: #92bce9;
     transform: translateY(-2px);
 }
 
