--- a/public/css/orderplaced.css
+++ b/public/css/orderplaced.css
@@ -4,15 +4,15 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: #f9f9f9;
+  background: #28a745;
 }
 
 .order-success {
   text-align: center;
-  background: #fff;
+  background: #28a745;
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.301);
 }
 
 .order-success img {
@@ -21,15 +21,21 @@ body {
 }
 
 .order-success h2 {
-  color: #28a745;
+  color: #f6fff8;
+}
+
+.order-success p{
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .order-success .btn {
   display: inline-block;
   margin-top: 20px;
   padding: 10px 20px;
-  background: #28a745;
-  color: #fff;
+  background: #ffffff;
+  color: #28a745;
   text-decoration: none;
   border-radius: 8px;
 }
